tests/error/poly_errors_py312/unsolved1.py
from guppylang.decorator import guppy


@guppy
def foo[x: bool]() -> bool:
    return x


@guppy
def main() -> bool:
    return foo()


main.compile()
